Fixed charts gap

--- a/src/scss/components/chart.scss
+++ b/src/scss/components/chart.scss
@@ -9,5 +9,6 @@
     &s {
         display: flex;
         justify-content: space-around;
+        gap: 20px;
     }
 }
